[gd_scene load_steps=8 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Principal.gd" type="Script" id=2]
[ext_resource path="res://inimigo.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]
[ext_resource path="res://dodge_assets/art/House In a Forest Loop.ogg" type="AudioStream" id=5]
[ext_resource path="res://dodge_assets/art/gameover.wav" type="AudioStream" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -0.923157, -0.20224, 0, 0, 0, 0, 478.388, 0.638657, 0, 0, 0, 0, 479.875, 720, 0, 0, 0, 0, -0.889458, 719.965, 0, 0, 0, 0, -0.923157, -0.20224 )
}

[node name="Principal" type="Node"]
script = ExtResource( 2 )
Inimigo = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
margin_left = 2.82849
margin_right = 478.828
margin_bottom = 719.0
color = Color( 0.0862745, 0.352941, 0.458824, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player" parent="." instance=ExtResource( 1 )]

[node name="inicioTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="pontuacaoTimer" type="Timer" parent="."]

[node name="inimigoTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="posicaoInicial" type="Position2D" parent="."]
position = Vector2( 240, 450 )

[node name="caminhoInimigo" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="spawnInimigo" type="PathFollow2D" parent="caminhoInimigo"]
position = Vector2( -0.923157, -0.20224 )
rotation = 0.00175439

[node name="HUD" parent="." instance=ExtResource( 4 )]

[node name="Musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="DeathSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[connection signal="body_entered" from="player" to="player" method="_on_player_body_entered"]
[connection signal="hit" from="player" to="." method="game_over"]
[connection signal="timeout" from="inicioTimer" to="." method="_on_inicioTimer_timeout"]
[connection signal="timeout" from="pontuacaoTimer" to="." method="_on_pontuacaoTimer_timeout"]
[connection signal="timeout" from="inimigoTimer" to="." method="_on_inimigoTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="novo_jogo"]
